--- a/uikit/src/main/res/values-pt/strings.xml
+++ b/uikit/src/main/res/values-pt/strings.xml
@@ -113,7 +113,7 @@
     <string name="has_shared_whiteboard">compartilhou um whiteboar colaborativo</string>
     <string name="you_created_whiteboard">Você criou um novo whiteboar colaborativo</string>
     <string name="you_created_document">Você criou um novo documento colaborativo</string>
-    <string name="photo_video_library">Biblioteca de fotos e vídeos</string>
+    <string name="photo_library">Biblioteca de fotos e vídeos</string>
     <string name="take_a_photo">Tirar uma foto</string>
     <string name="share_location">Compartilhar Localização</string>
     <string name="reply_message">Responder Mensagem</string>
